--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "node project for kipu module 4",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/GonzaloGrande/ethKipu4/issues"
   },
-  "homepage": "https://github.com/GonzaloGrande/ethKipu4#readme"
+  "homepage": "https://github.com/GonzaloGrande/ethKipu4#readme",
+  "dependencies": {
+    "express": "^4.21.2",
+    "web3": "^4.16.0"
+  }
 }
